# shelby_bot

./: Dockerfile  pyproject.toml
admin_panel/: main.py  pyproject.toml
admin_panel/template/: index.html
db/: object.json
parser_bot/: docker-compose.yaml  main.py
parser_bot/src/config/: __init__.py
parser_bot/src/database/: db.py
parser_bot/src/model/: model.py
src/api/: api.py
src/config/: __init__.py
src/service/: order.py
